hphp/hack/test/typecheck/type__toString4.php.exp
ERROR: File "type__toString4.php", line 21, characters 18-22:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "type__toString4.php", line 21, characters 18-22:
  Expected `string` or `int`
  File "type__toString4.php", line 21, characters 18-22:
  But got `ToS`
ERROR: File "type__toString4.php", line 21, characters 18-22:
String concatenation can only be performed on string and int arguments (Typing[4414])
  File "type__toString4.php", line 21, characters 18-22:
  Expected `string` or `int`
  File "type__toString4.php", line 21, characters 18-22:
  But got `this as ToS`
